--- a/HardCodedAuthenticationTest/project.lock.json
+++ b/HardCodedAuthenticationTest/project.lock.json
@@ -6817,9 +6817,9 @@
       "Microsoft.Framework.Logging >= 1.0.0-beta5",
       "Microsoft.Framework.Logging.Console >= 1.0.0-beta5",
       "Microsoft.VisualStudio.Web.BrowserLink.Loader >= 14.0.0-beta5",
-      "HardCodedAuthenticationMiddleware >= 1.0.0-*",
       "Microsoft.Framework.Configuration.Json >= 1.0.0-beta5",
-      "Microsoft.Framework.Configuration.UserSecrets >= 1.0.0-beta5"
+      "Microsoft.Framework.Configuration.UserSecrets >= 1.0.0-beta5",
+      "HardCodedAuthenticationMiddleware >= 1.0.0-*"
     ],
     "DNX,Version=v4.5.1": [],
     "DNXCore,Version=v5.0": []
