--- a/HardCodedAuthenticationMiddleware/project.json
+++ b/HardCodedAuthenticationMiddleware/project.json
@@ -1,30 +1,32 @@
 {
-    "version": "1.0.0-*",
-    "description": "",
-    "authors": [ "" ],
-    "tags": [ "" ],
-    "projectUrl": "",
-    "licenseUrl": "",
+  "version": "1.0.0-*",
+  "description": "Simple ASP.NET 5 middleware that allows for hard-coding claims and automatically authenticates the user to simplify local development.",
+  "copyright": "Copyright © 2015 Jonathan Freeland",
+  "title": "HardCodedAuthenticationMiddleware",
+  "projectUrl": "https://github.com/jonfreeland/HardCodedAuthenticationMiddleware",
+  "authors": [ "Jonathan Freeland" ],
+  "tags": [ "middleware", "authentication", "authorization" ],
+  "licenseUrl": "",
 
-    "dependencies": {
-        "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta5",
-        "Microsoft.Framework.Configuration": "1.0.0-beta5",
-        "Microsoft.AspNet.Authentication": "1.0.0-beta5"
+  "dependencies": {
+    "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta5",
+    "Microsoft.Framework.Configuration": "1.0.0-beta5",
+    "Microsoft.AspNet.Authentication": "1.0.0-beta5"
+  },
+
+  "frameworks": {
+    "dnx451": {
+      "dependencies": {
+        "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta5"
+      }
     },
-
-    "frameworks": {
-        "dnx451": {
-            "dependencies": {
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta5"
-            }
-        },
-        "dnxcore50": {
-            "dependencies": {
-                "System.Collections": "4.0.10-beta-22816",
-                "System.Linq": "4.0.0-beta-22816",
-                "System.Threading": "4.0.10-beta-22816",
-                "Microsoft.CSharp": "4.0.0-beta-22816"
-            }
-        }
+    "dnxcore50": {
+      "dependencies": {
+        "System.Collections": "4.0.10-beta-22816",
+        "System.Linq": "4.0.0-beta-22816",
+        "System.Threading": "4.0.10-beta-22816",
+        "Microsoft.CSharp": "4.0.0-beta-22816"
+      }
     }
+  }
 }
